# PyPSA

./: .codespell.ignore  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lychee.toml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .swp  .syncignore-receive  .syncignore-send  .travis.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  REUSE.toml  Snakefile  __init__.py  _doc_script.py  _test_script.py  _top_script.py  australia-example-p_max_pu.csv  australia-example-p_set.csv  australia-example-shapes.geojson  borg-it  classes.py  cluster.yaml  codecov.yml  components.py  config.default.yaml  (+31 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.md
.github/workflows/: CI-conda.yml  CI-micromamba.yml  CI.yaml  CI.yml  ci-conda-environment.yaml  ci-pip-environment.yaml  ci.yaml  codeql.yml  deploy.yml  link-check.yml  python-package-conda.yml  python-package.yml  release.yml  test-micromamba.yml  test-models.yml  test-pypi.yml  test-smspp.yml  test.yml
.reuse/: dep5
.spyproject/: workspace.ini
.spyproject/config/: workspace.ini
LICENSES/: GPL-3.0-or-later.txt
binder/: environment.yml
data/: agg_p_nom_minmax.csv  buses.csv  costs.csv  custom_powerplants.csv  dclines.csv  dclines_p-nom.csv  geth2015_hydro_capacities.csv  hydro_aggregation.csv  line-dups.csv  links.csv  links_p_nom.csv  links_tyndp.csv  parameter_corrections.yaml  transformers.csv
doc/: Makefile  api_reference.rst  branches.csv  buses.csv  circuitikz.tex  citing.rst  cloudcomputing.rst  comparable_software.rst  components.rst  conf.py  configuration.rst  contingency_analysis.rst  contributing.rst  conventions.rst  converters.csv  costs.rst  design.rst  developers.rst  documentation.org  example.rst  example.rst~  examples-basic.rst  examples-lopf.rst  examples-models.rst  examples-other.rst  examples-sector_coupling.rst  examples.rst  generators.csv  gens.csv  globals.rst  glossary.rst  import_export.rst  index.rst  installation.rst  introduction.rst  limitations.rst  lines.csv  links.csv  loads.csv  mailing_list.rst  (+35 more)
docs/: CODE_OF_CONDUCT.md  SECURITY.md  circuitikz.tex  conf.py  index.md  release-notes.md  requirements.txt
envs/: environment.docs.yaml  environment.fixed.yaml  environment.yaml
examples/: ac-dc-lopf-updated.ipynb  add_load_gen_trafos_to_scigrid-updated.ipynb  add_load_gen_trafos_to_scigrid.ipynb  battery-electric-vehicle-charging.ipynb  biomass-synthetic-fuels-carbon-management.ipynb  build_model.py  build_test_network.py  chp-fixed-heat-power-ratio.ipynb  europe.py  export_opf-storage_network.py  generation-investment-screening-curve.ipynb  generation-investment-screening-curve.py  learning_example.py  logging-demo-updated.ipynb  logging-demo.py  lopf-with-heating.ipynb  lopf_with_pyomo_False.ipynb  lopf_with_pyomo_False_updated.ipynb  minimal_example_lopf.py  minimal_example_pf.ipynb  minimal_example_pf.py  minimal_example_switches.py  multi-decade-example.py  opf-extend_generators.py  opf-storage.py  opf.py  power-to-gas-boiler-chp.ipynb  power-to-heat-water-tank.ipynb  replace-generator-storage-units-with-store-updated.ipynb  replace-generator-storage-units-with-store.ipynb  scigrid-lopf-then-pf-updated.ipynb  scigrid-lopf-then-pf.ipynb.1  scigrid-sclopf-updated.ipynb  scigrid-sclopf.ipynb  simple-electricity-market-examples.ipynb  simple-electricity-market-examples.py  transformer_example.ipynb  transformer_example.py  unit-commitment.ipynb  unit-commitment.py
minimal_example/: README.md  minimal_example.py
notebooks/: intermed-results.ipynb  map_example.ipynb  pypsa-eur.ipynb  pypsa_map.html
pypsa/: __init__.py  _linopy_compat.py  _options.py  _outage_schedule.py  collection.py  common.py  components TEST.py  components v01a.xlsx  components.csv  components.py  consistency.py  constants.py  contingency.py  control.py  core.py  costs.py  deprecations.py  descriptors.py  examples.py  generators.csv  geo.py  graph.py  guards.py  inverter_functions.py  io TEST.py  io.py  learning.py  linopf.py  linopt.py  logic.py  networkclustering.py  networks.py  opf.py  opf_lm.py  opf_lowmemory.py  opt.py  opt_lm.py  opt_lowmemory.py  optimization.py  pf.py  (+13 more)
resources/: powerplants.csv
scripts/: _helpers.py  add_electricity.py  add_extra_components.py  base_network.py  build_bus_regions.py  build_country_flh.py  build_cutout.py  build_hydro_profile.py  build_load_data.py  build_natura_raster.py  build_powerplants.py  build_renewable_potentials.py  build_renewable_profiles.py  build_shapes.py  cluster_network.py  make_summary.py  plot_network.py  plot_p_nom_max.py  plot_summary.py  prepare_links_p_nom.py  prepare_network.py  retrieve_cutout.py  retrieve_databundle.py  retrieve_natura_raster.py  simplify_network.py  solve_network.py  solve_operations_network.py  trace_solve_network.py
test/: config.test1.yaml  conftest.py  multi-decade-test.ipynb  multi-decade-test.py  readme.txt  test_ac_dc_lopf.py  test_ac_dc_lpf.py  test_add_piecewise.py  test_add_remove_suffix.py  test_add_segments.py  test_apply_outage_schedule.py  test_bugs.py  test_buses.py  test_capital_cost_split.py  test_carriers.py  test_collection.py  test_collection_statistics.py  test_committable_extendable.py  test_committable_extendable_comprehensive.py  test_committable_extendable_realworld.py  test_common.py  test_common_deprecations.py  test_compatibility_ext_and_com.py  test_component.py  test_components.py  test_components_abstract.py  test_components_array.py  test_components_custom.py  test_components_store.py  test_components_utils.py  test_consistency_check.py  test_constants.py  test_control_strategies_against_cerberus.py  test_deprecations.py  test_descriptors.py  test_dispatch_delay.py  test_docs.py  test_emissions.py  test_examples.py  test_graph.py  (+109 more)
validation/: grid_consistency_check.ipynb
website/: doc  generate.py  img  index.org  theme.css
(+954 files in other folders)
